--- a/README
+++ b/README
@@ -6,6 +6,8 @@
 	is clicked. The static map is replaced with a div. The
 	div is filled with a regular interactive Google map.
 	
+	Demo: http://github.com/augustl/unobtrusive-google-maps/tree/master
+	
 	
 	
 --~~ Usage ~~--
