--- a/README
+++ b/README
@@ -6,7 +6,7 @@
 	is clicked. The static map is replaced with a div. The
 	div is filled with a regular interactive Google map.
 	
-	Demo: http://github.com/augustl/unobtrusive-google-maps/tree/master
+	Demo: http://august.lilleaas.net/_demo/unobtrusive_google_maps_plugin.html
 	
 	
 	
