Updating demo link.

--- a/README
+++ b/README
@@ -6,7 +6,7 @@
 	is clicked. The static map is replaced with a div. The
 	div is filled with a regular interactive Google map.
 	
-	Demo: http://august.lilleaas.net/_demo/unobtrusive_google_maps_plugin.html
+        Demo: http://f.augustl.com/2011/unobtrusive_google_maps/
 	
 	
 	
